--- a/frontend/package.json
+++ b/frontend/package.json
@@ -1,6 +1,5 @@
 {
   "name": "testapp",
-  "proxy": "http://127.0.0.1:8000",
   "private": true,
   "version": "0.0.0",
   "type": "module",
@@ -14,6 +13,7 @@
     "@fvilers/disable-react-devtools": "^1.3.0",
     "axios": "^1.6.7",
     "bootstrap": "^5.3.3",
+    "dayjs": "^1.11.10",
     "jwt-decode": "^4.0.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
