--- a/frontend/package.json
+++ b/frontend/package.json
@@ -15,11 +15,15 @@
     "@fvilers/disable-react-devtools": "^1.3.0",
     "@mui/icons-material": "^5.8.4",
     "@mui/material": "^5.9.3",
+    "@szhsin/react-menu": "^4.1.0",
+    "@tanstack/react-query": "^5.28.6",
+    "@tanstack/react-query-devtools": "^5.25.0",
     "@uidotdev/usehooks": "^2.4.1",
     "axios": "^1.6.7",
     "bootstrap": "^5.3.3",
     "dayjs": "^1.11.10",
     "jwt-decode": "^4.0.0",
+    "ldrs": "^1.0.1",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-icons": "^5.0.1",
