--- a/frontend/package.json
+++ b/frontend/package.json
@@ -13,12 +13,21 @@
     "@emotion/react": "^11.10.0",
     "@emotion/styled": "^11.10.0",
     "@fvilers/disable-react-devtools": "^1.3.0",
-    "@mui/icons-material": "^5.8.4",
-    "@mui/material": "^5.9.3",
+    "@mantine/core": "^7.6.2",
+    "@mantine/dropzone": "^7.6.2",
+    "@mantine/form": "^7.6.2",
+    "@mantine/hooks": "^7.6.2",
+    "@mantine/modals": "^7.6.2",
+    "@mantine/notifications": "^7.6.2",
+    "@mantine/nprogress": "^7.6.2",
+    "@mantine/tiptap": "^7.6.2",
     "@szhsin/react-menu": "^4.1.0",
+    "@tabler/icons-react": "^3.1.0",
     "@tanstack/react-query": "^5.28.6",
     "@tanstack/react-query-devtools": "^5.25.0",
-    "@uidotdev/usehooks": "^2.4.1",
+    "@tiptap/extension-link": "^2.2.4",
+    "@tiptap/react": "^2.2.4",
+    "@tiptap/starter-kit": "^2.2.4",
     "axios": "^1.6.7",
     "bootstrap": "^5.3.3",
     "dayjs": "^1.11.10",
@@ -27,13 +36,11 @@
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-icons": "^5.0.1",
-    "react-onclickoutside": "^6.13.0",
     "react-router-dom": "^6.22.2"
   },
   "devDependencies": {
     "@types/react": "^18.2.56",
     "@types/react-dom": "^18.2.19",
-    "@types/react-onclickoutside": "^6.7.10",
     "@typescript-eslint/eslint-plugin": "^7.0.2",
     "@typescript-eslint/parser": "^7.0.2",
     "@vitejs/plugin-react": "^4.2.1",
