--- a/frontend/package.json
+++ b/frontend/package.json
@@ -25,9 +25,12 @@
     "@tabler/icons-react": "^3.1.0",
     "@tanstack/react-query": "^5.28.6",
     "@tanstack/react-query-devtools": "^5.25.0",
+    "@tiptap/extension-character-count": "^2.2.4",
     "@tiptap/extension-link": "^2.2.4",
+    "@tiptap/extension-placeholder": "^2.2.4",
     "@tiptap/react": "^2.2.4",
     "@tiptap/starter-kit": "^2.2.4",
+    "add": "^2.0.6",
     "axios": "^1.6.7",
     "bootstrap": "^5.3.3",
     "dayjs": "^1.11.10",
@@ -35,12 +38,15 @@
     "ldrs": "^1.0.1",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-html-parser": "^2.0.2",
     "react-icons": "^5.0.1",
-    "react-router-dom": "^6.22.2"
+    "react-router-dom": "^6.22.2",
+    "yarn": "^1.22.22"
   },
   "devDependencies": {
     "@types/react": "^18.2.56",
     "@types/react-dom": "^18.2.19",
+    "@types/react-html-parser": "^2.0.6",
     "@typescript-eslint/eslint-plugin": "^7.0.2",
     "@typescript-eslint/parser": "^7.0.2",
     "@vitejs/plugin-react": "^4.2.1",
