--- a/frontend/package.json
+++ b/frontend/package.json
@@ -10,6 +10,8 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@ashwamegh/react-link-preview": "^1.0.0",
+    "@dhaiwat10/react-link-preview": "^1.15.0",
     "@emotion/react": "^11.10.0",
     "@emotion/styled": "^11.10.0",
     "@fvilers/disable-react-devtools": "^1.3.0",
@@ -33,6 +35,8 @@
     "add": "^2.0.6",
     "axios": "^1.6.7",
     "bootstrap": "^5.3.3",
+    "browser-image-compression": "^2.0.2",
+    "compressorjs": "^1.2.1",
     "dayjs": "^1.11.10",
     "jwt-decode": "^4.0.0",
     "ldrs": "^1.0.1",
@@ -40,13 +44,20 @@
     "react-dom": "^18.2.0",
     "react-html-parser": "^2.0.2",
     "react-icons": "^5.0.1",
+    "react-modal": "^3.16.1",
+    "react-responsive-modal": "^6.4.2",
     "react-router-dom": "^6.22.2",
+    "react-simple-image-viewer": "^1.2.2",
+    "validator": "^13.11.0",
     "yarn": "^1.22.22"
   },
   "devDependencies": {
+    "@types/": "ashwamegh/react-link-preview",
     "@types/react": "^18.2.56",
     "@types/react-dom": "^18.2.19",
     "@types/react-html-parser": "^2.0.6",
+    "@types/react-modal": "^3.16.3",
+    "@types/validator": "^13.11.9",
     "@typescript-eslint/eslint-plugin": "^7.0.2",
     "@typescript-eslint/parser": "^7.0.2",
     "@vitejs/plugin-react": "^4.2.1",
