--- a/frontend/package.json
+++ b/frontend/package.json
@@ -41,6 +41,7 @@
     "react-dom": "^18.2.0",
     "react-html-parser": "^2.0.2",
     "react-icons": "^5.0.1",
+    "react-phone-number-input": "^3.3.12",
     "react-responsive-modal": "^6.4.2",
     "react-router-dom": "^6.22.2",
     "react-simple-image-viewer": "^1.2.2",
