--- a/frontend/package.json
+++ b/frontend/package.json
@@ -37,10 +37,12 @@
     "dayjs": "^1.11.10",
     "jwt-decode": "^4.0.0",
     "ldrs": "^1.0.1",
+    "rc-drawer": "^7.1.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-html-parser": "^2.0.2",
     "react-icons": "^5.0.1",
+    "react-modern-drawer": "^1.2.2",
     "react-phone-number-input": "^3.3.12",
     "react-responsive-modal": "^6.4.2",
     "react-router-dom": "^6.22.2",
